--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,11 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Toasty
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
 }
