--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
     defaultConfig {
         applicationId "com.example.kotlinsuitmedia"
         minSdkVersion 23
@@ -61,4 +65,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
     implementation "com.squareup.retrofit2:converter-moshi:2.6.0"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    //Loading Screen
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
