--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -65,6 +66,15 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
     implementation "com.squareup.retrofit2:converter-moshi:2.6.0"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    //Room
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    //Toasty
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     //Loading Screen
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
